--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "jquery": "^3.5.1",
         "jsonwebtoken": "^8.3.0",
         "jwt-decode": "^2.2.0",
-        "moment": "^2.22.2",
+        "moment": "^2.27.0",
+        "moment-with-locales-es6": "^1.0.1",
         "mongoose": "^5.2.14",
         "morgan": "^1.9.1",
         "popper.js": "^1.16.1",
@@ -47,6 +48,7 @@
         "concurrently": "^4.0.1",
         "cssnano": "^4.1.0",
         "node-sass": "^4.9.3",
+        "nodemon": "^2.0.4",
         "parcel-bundler": "^1.9.7",
         "react-hot-loader": "^4.3.7"
     }
