--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
         "jquery": "^3.5.1",
         "jsonwebtoken": "^8.3.0",
         "jwt-decode": "^2.2.0",
-        "moment": "^2.27.0",
-        "moment-with-locales-es6": "^1.0.1",
+        "moment": "^2.0.0",
         "mongoose": "^5.2.14",
         "morgan": "^1.9.1",
         "popper.js": "^1.16.1",
@@ -37,7 +36,8 @@
         "react-dom": "^16.13.1",
         "react-page-scroller": "^2.0.7-beta",
         "react-router": "^4.3.1",
-        "react-router-dom": "^4.3.1"
+        "react-router-dom": "^4.3.1",
+        "suneditor-react": "^2.12.3"
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
