--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-bootstrap": "^1.0.1",
         "react-dom": "^16.13.1",
         "react-page-scroller": "^2.0.7-beta",
+        "react-paginate": "^6.3.2",
         "react-router": "^4.3.1",
         "react-router-dom": "^4.3.1",
         "src": "^1.1.2",
