--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "author": "Lukas Gisder-Dubé",
     "license": "ISC",
     "dependencies": {
+        "@fortawesome/react-fontawesome": "^0.1.11",
         "axios": "^0.18.0",
         "bcrypt": "^3.0.0",
         "body-parser": "^1.18.3",
