--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react": "^16.13.1",
         "react-bootstrap": "^1.0.1",
         "react-dom": "^16.13.1",
+        "react-hook-form": "^6.0.1",
         "react-page-scroller": "^2.0.7-beta",
         "react-paginate": "^6.3.2",
         "react-router": "^4.3.1",
