--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "jsonwebtoken": "^8.3.0",
         "jwt-decode": "^2.2.0",
         "moment": "^2.0.0",
+        "mongodb": "^3.5.9",
         "mongoose": "^5.2.14",
         "morgan": "^1.9.1",
         "popper.js": "^1.16.1",
