--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "mongodb": "^3.5.9",
         "mongoose": "^5.2.14",
         "morgan": "^1.9.1",
+        "nodemailer": "^6.4.10",
         "popper.js": "^1.16.1",
         "react": "^16.13.1",
         "react-bootstrap": "^1.0.1",
